--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.root=WARN
 logging.level.com.mdt.prodigy=TRACE
 
-server.servlet.context-path=/prodigy
+server.servlet.context-path=/taymyr
 
