--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
 			<version>${hapi.version}</version>
 		</dependency>
 
+		<!-- Used to easily find certain pieces of data (ie age and sex) -->
+		<dependency>
+			<groupId>com.mdt.fhir</groupId>
+			<artifactId>FHIRHapiHelper</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
