Added code for https.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 logging.level.root=WARN
 logging.level.com.mdt.prodigy=TRACE
-
+server.port=52774
 server.servlet.context-path=/taymyr
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.test.p12
+server.ssl.key-store-password=96uZuq5WW4O3zbijDj0OJLRtPluiQl
+server.ssl.key-alias=prodigy
+
+security.require-ssl=true
 
